@@ -1,5 +1,7 @@
 New entries should be added at the top
 
+2005-06-01 Added Nicholas' frombyte image patch - JDH
+
 2005-05-31 Added vertical TeX support for agg - JDH
 
 2005-05-31 Applied Eric's cntr patch - JDH
